# cfn-deploy

./: .gitignore  Dockerfile  LICENSE  README.md  cfn-deploy.cabal  docker-compose.yml  stack.yaml
app/: Main.hs
