name:                cfn-deploy
version:             0.0.1.0
synopsis:            Toolkit for using cfndsl and stackup to create and deploy cloudformation
description:         Please see README.md
homepage:            https://github.com/pvdvreede/cfn-deploy
license:             BSD3
license-file:        LICENSE
author:              Paul Van de Vreede
maintainer:          pvdvreede@gmail.com
copyright:           2016 Paul Van de Vreede
category:            AWS
build-type:          Simple
cabal-version:       >=1.10

executable cfn-deploy
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shake
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pvdvreede/cfn-deploy
